# ClearML-Learning

./: .gitignore  README.md  pyproject.toml  request.md  test.py
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  tqdm_progress_bar.yaml
configs/clearml/: default.yaml  none.yaml
configs/experiment/: example.yaml  mnist.yaml
practice/: ct_controller.py  make_dataset_v1.py  make_dataset_v2.py  train.py
scripts/: clearml_run.py  clearml_train.py  schedule.sh
src/: train.py
src/utils/: __init__.py  clearml_utils.py
