[project]
name = "lightning-hydra-template"
version = "0.1.0"
description = "PyTorch Lightning + Hydra MNIST training template with ClearML integration"
requires-python = ">=3.10"
dependencies = [
    # PyTorch ecosystem
    "torch>=2.5,<2.8",
    "torchvision>=0.20",
    "torchmetrics>=0.7,<1.9",
    "lightning>=2.5",

    # Hydra config management
    "hydra-core>=1.3",
    "hydra-colorlog",
    "omegaconf",

    # Logging & Experiment tracking
    "tensorboard",
    "clearml",
    "clearml-agent",

    # Utilities
    "rootutils",
    "rich",
    "lightning-utilities>=0.10,<0.16",

    # Data processing & Visualization
    "opencv-python-headless",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
